--- a/schedule-style.css
+++ b/schedule-style.css
@@ -402,3 +402,23 @@ li.schedule-column.trash-column{
   -webkit-transform:scale(1.3);
   transform:scale(1.3);
 }
+
+#reload{
+  height:60px;
+  width:56px;
+  font-family: 'Poppins', sans-serif;
+  font-size:12pt;
+  border:2px solid black;
+  border-radius:50%;
+  background-color:transparent;
+  position:absolute;
+  top:90.5%;
+  left:66%;
+  z-index:2;
+}
+#reload-icon{
+  width:55px;
+  height:58px;
+  margin-left:-2.5px;
+  margin-top:-1.5px;
+}
