--- a/css/style.css
+++ b/css/style.css
@@ -4494,15 +4494,15 @@ ul.count_down.white li p:nth-child(2) {
 
 #emotion{
     position:absolute;
-    top:11.5%;
-    left:27%;
+    top:32%;
+    left:25%;
     display: none;
     /* display:flex; */
     justify-content:center;
     align-items:center;
     background: rgb(127, 255, 212, 0.5);
-    width: 120px;
-    height: 120px;
+    width: 113px;
+    height: 113px;
     border-radius: 50%;
     text-align:center;
     z-index:2;
@@ -4511,20 +4511,20 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-inner{
     background: rgb(240, 255, 255, 0.8);
-    width: 90px;
-    height: 90px;
+    width: 83px;
+    height: 83px;
     border-radius: 50%;
     border: solid 2px #ccffee;
 }
 #mood{
-    height:70px;
-    width:80px;
+    height:63px;
+    width:73px;
     border-radius: 50%;
     margin-top:5%;
 }
 #emotion-text{
     background:transparent;
-    width: 90px;
+    width: 80px;
     height: 30px;
     align-items:center;
     justify-content: center;
@@ -4542,15 +4542,15 @@ ul.count_down.white li p:nth-child(2) {
 
 #emotion2{
     position:absolute;
-    top:11.5%;
-    left:35%;
+    top:32%;
+    left:32.75%;
     display: none;
     /* display:flex; */
     justify-content:center;
     align-items:center;
     background: rgb(77, 77, 255, 0.4);
-    width: 120px;
-    height: 120px;
+    width: 113px;
+    height: 113px;
     border-radius: 50%;
     text-align:center;
     z-index:2;
@@ -4558,14 +4558,14 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-inner2{
     background:rgb(77, 77, 255);
-    width: 90px;
-    height: 90px;
+    width: 83px;
+    height: 83px;
     border-radius: 50%;
     border:2px solid #8080ff;
 }
 #mood2{
-    height:70px;
-    width:80px;
+    height:63px;
+    width:73px;
     border-radius: 50%;
     margin-top:5%;
 }
@@ -4579,7 +4579,7 @@ ul.count_down.white li p:nth-child(2) {
     font-size:14pt;
     color:black;
     /* text-align:center; */
-    margin-left:-2.75%;
+    margin-left:-7.75%;
     /* margin-top:-1.5%; */
     /* margin-top:-5%; */
     z-index: 3;
@@ -4590,15 +4590,15 @@ ul.count_down.white li p:nth-child(2) {
 
 #emotion3{
     position:absolute;
-    top:26.5%;
-    left:27%;
+    top:47.5%;
+    left:25%;
     display: none;
     /* display:flex; */
     justify-content:center;
     align-items:center;
     background: rgb(255,0,0, 0.5);
-    width: 120px;
-    height: 120px;
+    width: 113px;
+    height: 113px;
     border-radius: 50%;
     text-align:center;
     z-index:2;
@@ -4606,14 +4606,14 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-inner3{
     background: rgb(255,0,0,0.8);
-    width: 90px;
-    height: 90px;
+    width: 83px;
+    height: 83px;
     border-radius: 50%;
     border: 2px solid #ff4d4d;
 }
 #mood3{
-    height:70px;
-    width:80px;
+    height:63px;
+    width:73px;
     border-radius: 50%;
     margin-top:5%;
 }
@@ -4627,8 +4627,8 @@ ul.count_down.white li p:nth-child(2) {
     font-size:14pt;
     color:black;
     /* text-align:center; */
-    /* margin-left:-2.75%; */
-    margin-top:-4%;
+    margin-left:-8.75%;
+    margin-top:-8%;
     /* margin-top:-5%; */
     z-index: 3;
     font-weight: bold;
@@ -4638,15 +4638,15 @@ ul.count_down.white li p:nth-child(2) {
 
 #emotion4{
     position:absolute;
-    top:26.5%;
-    left:35%;
+    top:47.5%;
+    left:32.75%;
     display: none;
     /* display:flex; */
     justify-content:center;
     align-items:center;
     background:rgb(255, 215, 0, 0.5);
-    width: 120px;
-    height: 120px;
+    width: 113px;
+    height: 113px;
     border-radius: 50%;
     text-align:center;
     z-index:2;
@@ -4654,8 +4654,8 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-inner4{
     background:rgb(255, 215, 0, 0.8);
-    width: 90px;
-    height: 90px;
+    width: 83px;
+    height: 83px;
     border-radius: 50%;
     border: 2px solid #ffe44d;
 }
@@ -4667,7 +4667,7 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-text4{
     background:transparent;
-    width: 90px;
+    width: 83px;
     height: 30px;
     justify-content: center;
     align-items:center;
@@ -4684,8 +4684,8 @@ ul.count_down.white li p:nth-child(2) {
 
 #emotion5{
     position:absolute;
-    top:42%;
-    left:27%;
+    top:63%;
+    left:25%;
     display: none;
     /* display:flex; */
     justify-content:center;
@@ -4731,8 +4731,8 @@ ul.count_down.white li p:nth-child(2) {
 
 #emotion6{
     position:absolute;
-    top:42%;
-    left:35%;
+    top:63%;
+    left:32.75%;
     display: none;
     /* display:flex; */
     justify-content:center;
@@ -4771,7 +4771,7 @@ ul.count_down.white li p:nth-child(2) {
     margin-top:-3%;
     z-index: 3;
     font-weight: bold;
-    margin-left:-2.25%;
+    margin-left:-3.75%;
     /* border-radius: 50%; */
 }
 
@@ -5960,40 +5960,40 @@ input[type=checkbox] {
       position:absolute;
       display:none;
       top:9.5%;
-      left:75.25%;
-      height:317px;
-      width:317px;
+      left:76.5%;
+      height:30px;
+      width:300px;
       /* border:solid 2px limegreen; */
       z-index:3;
   }
   #stay-happy{
     z-index:3;
-    height:315px;
-    width:315px;
+    height:300px;
+    width:300px;
   }
 
   #better-display{
     position:absolute;
     display:none;
     top:9.5%;
-    left:75.25%;
-    height:317px;
-    width:317px;
+    left:76.5%;
+    height:300px;
+    width:300px;
     /* border:solid 2px limegreen; */
     z-index:3;
 }
 #get-better{
   z-index:3;
-  height:315px;
-  width:315px;
+  height:300px;
+  width:300px;
 }
 #option1{
     display:none;
     position: absolute;
     top:15%;
-    left:75%;
+    left:76.5%;
     height:50px;
-    width:320px;
+    width:300px;
     background-color: transparent;
     color:black;
     border: solid 2.5px #8080ff;
@@ -6026,9 +6026,9 @@ input[type=checkbox] {
     display:none;
     position: absolute;
     top:25%;
-    left:75%;
+    left:76.5%;
     height:50px;
-    width:320px;
+    width:300px;
     background-color: transparent;
     color:black;
     border: solid 2.5px #8080ff;
@@ -6053,9 +6053,9 @@ input[type=checkbox] {
     flex-direction:row;
     position: absolute;
     top:15%;
-    left:75%;
+    left:76.5%;
     height:80px;
-    width:320px;
+    width:300px;
     background-color: transparent;
     color:black;
     border: solid 2.5px #8080ff;
@@ -6080,9 +6080,9 @@ input[type=checkbox] {
     flex-direction:row;
     position: absolute;
     top:28%;
-    left:75%;
+    left:76.5%;
     height:80px;
-    width:320px;
+    width:300px;
     background-color: transparent;
     color:black;
     border: solid 2.5px #8080ff;
@@ -6392,3 +6392,69 @@ input[type=checkbox] {
     -webkit-transform:scale(1.3);
     transform:scale(1.3);
   }
+
+  #login{
+      position: absolute;
+      top:1%;
+      left:94.5%;
+      height:60px;
+      width:60px;
+      /* border:solid 3px lime; */
+      /* border-radius: 50%; */
+      z-index: 100;
+  }
+  #avatar{
+      height:55px;
+      width:55px;
+      /* margin-top:5px;
+      margin-left:3.5px; */
+  }
+  #login-dropdown{
+      position: absolute;
+      top:8%;
+      left:90.5%;
+      height:140px;
+      width:150px;
+      z-index: 4;
+      border:1px solid gray;
+      box-shadow: 0 0 3px black;
+      border-radius:5px;
+      background-color: #6EB8FC;
+      display:none;
+      /* display:flex; */
+      flex-direction: column;
+      /* justify-content: center; */
+      align-items: center;
+  }
+  #account-settings{
+      margin-bottom:1px;
+  }
+  #account-settings,
+  #app-settings,
+  #logout{
+      height:45px;
+      width:145px;
+      color:black;
+      font-family: 'Poppins', sans-serif;
+      font-size: 14pt;
+      /* font-weight: bold; */
+      -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,.8), inset 0 2px 0 rgba(255,255,255,.5), inset 0 -1px 0 rgba(0,0,0,.4);
+      -moz-box-shadow: inset 0 0 1px rgba(0,0,0,.8), inset 0 2px 0 rgba(255,255,255,.5), inset 0 -1px 0 rgba(0,0,0,.4);
+      box-shadow: inset 0 0 1px rgba(0,0,0,.8), inset 0 2px 0 rgba(255,255,255,.5), inset 0 -1px 0 rgba(0,0,0,.4);
+      -webkit-border-radius: 20px;
+      -moz-border-radius: 20px;
+      border-radius: 3px;
+      text-align: center;
+      padding-top:10px;
+      justify-content: center;
+      align-items: center;
+      margin-top:1px;
+      /* margin-left:1.5px; */
+  }
+  #account-settings:hover,
+  #app-settings:hover,
+  #logout:hover{
+      opacity:0.5;
+  }
+
+  
