added top bar and login button and otherthings that I can't remember off the top of my head

--- a/css/style.css
+++ b/css/style.css
@@ -6449,6 +6449,7 @@ input[type=checkbox] {
       justify-content: center;
       align-items: center;
       margin-top:1px;
+      box-shadow: 0 8px 6px -6px black;
       /* margin-left:1.5px; */
   }
   #account-settings:hover,
