--- a/virb/css/custom.css
+++ b/virb/css/custom.css
@@ -9,7 +9,7 @@
     height:80px;
     width:665px;
     /* border:solid 2px cyan; */
-    z-index: 2;
+    z-index: 3;
     text-shadow: 0 1px 0 #ccc,
                  0 2px 0 #c9c9c9,
                  0 3px 0 #bbb,
@@ -35,14 +35,14 @@
         height:70px;
         width:200px;
         /* border: 2px solid purple; */
-        z-index: 2;
+        z-index: 3;
         /* text-decoration: underline; */
         border-bottom: none;
       }
       #toolbox-logo{
         height:60px;
         width:49.8px;
-        z-index: 2;
+        z-index: 3;
       
       }
       #back{
@@ -52,7 +52,7 @@
         margin-top:17px;
         border-bottom: none;
         color: black;
-        text-shadow: 0 1px 0 #ccc,
+        /* text-shadow: 0 1px 0 #ccc,
                      0 2px 0 #c9c9c9,
                      0 3px 0 #bbb,
                      0 4px 0 #b9b9b9,
@@ -63,13 +63,91 @@
                      0 3px 5px rgba(0,0,0,.2),
                      0 5px 10px rgba(0,0,0,.25),
                      0 10px 10px rgba(0,0,0,.2),
-                     0 20px 20px rgba(0,0,0,.15);
+                     0 20px 20px rgba(0,0,0,.15); */
       
       }
       #toolbox-go:hover >#back{
-        color: rgb(0, 51, 204, 0.8);
+      text-decoration: underline;
       }
       #toolbox-go:hover >#toolbox-logo{
         -webkit-transform:scale(1.3);
         transform:scale(1.3);
       }
+
+  #topper{
+    position: absolute;
+    top:0;
+    left:0;
+    height:150px;
+    width:100%;
+    z-index:2;
+    background-image: linear-gradient(to right, #0033cc,#90ee90,#e6ffe6);
+    box-shadow: 0 8px 6px -6px black;
+  }
+
+  #login{
+    position: absolute;
+    top:1%;
+    left:94.5%;
+    height:60px;
+    width:60px;
+    /* border:solid 3px lime; */
+    /* border-radius: 50%; */
+    z-index: 10;
+}
+
+#avatar{
+  height:55px;
+  width:55px;
+  /* margin-top:5px;
+  margin-left:3.5px; */
+}
+#login-dropdown{
+    position: absolute;
+    top:8%;
+    left:90.5%;
+    height:140px;
+    width:150px;
+    z-index: 4;
+    border:1px solid gray;
+    box-shadow: 0 0 3px black;
+    border-radius:5px;
+    background-color: #6EB8FC;
+    display:none;
+    /* display:flex; */
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+#account-settings{
+    margin-bottom:1px;
+}
+#account-settings,
+#app-settings,
+#logout{
+    height:45px;
+    width:145px;
+    color:black;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14pt;
+    /* font-weight: bold; */
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,.8), inset 0 2px 0 rgba(255,255,255,.5), inset 0 -1px 0 rgba(0,0,0,.4);
+    -moz-box-shadow: inset 0 0 1px rgba(0,0,0,.8), inset 0 2px 0 rgba(255,255,255,.5), inset 0 -1px 0 rgba(0,0,0,.4);
+    box-shadow: inset 0 0 1px rgba(0,0,0,.8), inset 0 2px 0 rgba(255,255,255,.5), inset 0 -1px 0 rgba(0,0,0,.4);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 3px;
+    text-align: center;
+    padding-top:10px;
+    justify-content: center;
+    align-items: center;
+    margin-top:1px;
+    box-shadow: 0 8px 6px -6px black;
+    /* margin-left:1.5px; */
+}
+#account-settings:hover,
+#app-settings:hover,
+#logout:hover{
+    opacity:0.5;
+}
