--- a/virb/css/style.css
+++ b/virb/css/style.css
@@ -27,7 +27,8 @@ html {
 }
 
 body {
-  background: #ffffff;
+  background-image: url('images/transparent-bg.png');
+  background-size: cover;
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
   /* font-family: "Open Sans", sans-serif; */
@@ -2634,4 +2635,10 @@ figure:hover figcaption, figure:focus figcaption {
   text-decoration: none;
   outline: none;
   background: rgba(0, 0, 0, 0.9);
+}
+#slider1-img,
+#social-2{
+  display:block;
+  max-width: 100%;
+  height:auto;
 }
