--- a/css/style.css
+++ b/css/style.css
@@ -6214,8 +6214,22 @@ input[type=checkbox] {
 }
 #story-btn{
     position:absolute;
-    top:15%;
-    left:20%;
+    top:12%;
+    left:2%;
+    height:42px;
+    width:42px;
+    border-radius: 50%;
+    -webkit-transition: all .15s ease-in-out;
+    transition: all .15s ease-in-out;
+    box-shadow: 0 0 10px 0  #33ff33 inset, 0 0 20px 2px  #33ff33;
+    /* border: 3px dashed fuchsia; */
+    /* background-color: black; */
+    z-index:3;
+}
+#reward-btn{
+    position:absolute;
+    top:54.75%;
+    left:95%;
     height:42px;
     width:42px;
     border-radius: 50%;
@@ -6227,12 +6241,14 @@ input[type=checkbox] {
     z-index:3;
 }
 #go-schedule,
-#go-story{
+#go-story,
+#go-reward{
     height:40px;
     width:40px;
 }
 #schedule-btn:hover,
-#story-btn:hover{
+#story-btn:hover,
+#reward-btn:hover{
     -webkit-transform:scale(1.3);
     transform:scale(1.3);
 }
