fixed reward page finally; I hope it doesn't get fucked up because it took me forever to come up with a weird solution

--- a/schedule-style.css
+++ b/schedule-style.css
@@ -407,7 +407,7 @@ li.schedule-column.trash-column{
 
 #reload{
   height:60px;
-  width:56px;
+  width:60px;
   font-family: 'Poppins', sans-serif;
   font-size:12pt;
   border:2px solid black;
@@ -421,7 +421,8 @@ li.schedule-column.trash-column{
 #reload-icon{
   width:55px;
   height:58px;
-  margin-left:-2.5px;
+  /* margin-left:-2.5px; */
+  margin-top:-2px;
   /* margin-top:-1.5px; */
 }
 
